--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "potlucks-dot-dev",
+  "name": "potlucks-pal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.15",
+    "@sentry/nextjs": "^7.105.0",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-form": "^0.18.0",
+    "@tanstack/react-query": "^5.28.9",
+    "@xata.io/client": "^0.29.3",
+    "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.1"
+    "typescript": "^5"
   }
 }
