--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@kinde-oss/kinde-auth-nextjs": "^2.1.15",
+    "@clerk/nextjs": "^5.1.3",
     "@sentry/nextjs": "^7.105.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-form": "^0.18.0",
-    "@tanstack/react-query": "^5.28.9",
-    "@xata.io/client": "^0.29.3",
+    "@tanstack/react-query": "^5.40.0",
+    "@xata.io/client": "^0.29.5",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.3.0",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
